--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
+        password: ${{ secrets.PASSWORD }}
         source: "fastapi-app.tar.gz,docker-compose.prod.yml,nginx.conf"
         target: "/opt/fastapi-app/"
 
@@ -69,8 +68,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.PRIVATE_KEY }}
-        port: ${{ secrets.PORT }}
+        password: ${{ secrets.PASSWORD }}
         script: |
           cd /opt/fastapi-app
           
