--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,10 +8,10 @@ services:
     environment:
       - ENVIRONMENT=production
     expose:
-      - "8000"
+      - "8080"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -21,7 +21,7 @@ services:
     image: nginx:alpine
     container_name: fastapi-nginx
     ports:
-      - "80:80"
+      - "8081:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
@@ -31,7 +31,7 @@ services:
       - api
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8081/health"]
       interval: 30s
       timeout: 10s
       retries: 3
