--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-python-multipart==0.0.6
+python-multipart==0.0.19
+torch==2.7.1
+transformers==4.52.4
+pillow==11.2.1
