--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,28 @@
-name: Deploy FastAPI to Server
+name: CI/CD for FastAPI
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
   deploy:
+    needs: build-and-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
@@ -27,15 +42,6 @@ jobs:
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:${{ github.sha }}
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
 
-    - name: Copy config files to server
-      uses: appleboy/scp-action@v0.1.5
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        source: "docker-compose.prod.yml,nginx.conf"
-        target: "./fastapi-app/"
-
     - name: Deploy to server
       uses: appleboy/ssh-action@v1.0.0
       with:
@@ -43,11 +49,6 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         script: |
-          cd ./fastapi-app
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
           docker-compose -f docker-compose.prod.yml down || true
           docker-compose -f docker-compose.prod.yml up -d
-          sleep 15
-          curl -f http://localhost:8081/health || exit 1
-          docker image prune -f
-          echo "Deployment completed successfully!"
