--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,17 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
   api:
-    build: .
-    ports:
-      - "8080:8080"
+    image: fastapi-app:latest
+    container_name: fastapi-api
     environment:
-      - ENVIRONMENT=development
-    volumes:
-      - .:/app
+      - ENVIRONMENT=production
+    expose:
+      - "8081"
     restart: unless-stopped
-
-  # Opcional: Nginx como reverse proxy
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "8081:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - api
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
