--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         script: |
+          cd fastapi-app
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-app:latest
           docker-compose -f docker-compose.prod.yml down || true
           docker-compose -f docker-compose.prod.yml up -d
