Refactor main.py to remove unused model loading and endpoints, and update Uvicorn port to 8081

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,26 @@
-.venv
-venv
-.idea
-*.iml
-__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.env
+.venv/
+venv/
+ENV/
+
+# VSCode
+.vscode/
+
+# macOS
+.DS_Store
+
+# PyCharm
+.idea/
+
+# Docker
+*.log
+debug.log
+
+# Others
+uploads/
+
